# openclaw

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  RESUME.md  openclaw.yaml  openclaw.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
deploy/: Dockerfile  install.sh  openclaw-business.service  openclaw-dev.service  openclaw-personal.service  openclaw.service
openclaw/: __init__.py  __main__.py  app.py  config.py  tts.py  types.py
openclaw/connectors/: base.py  cmms.py  jarvis.py  knowledge.py  maintenance_llm.py  matrix.py  plc.py
openclaw/diagnosis/: faults.py  prompts.py
openclaw/diagram/: __init__.py  layout.py  renderer.py  schema.py  style.py  symbols.py
openclaw/gateway/: auth.py  base.py  http_api.py  rate_limit.py  telegram.py  websocket.py  whatsapp.py
openclaw/llm/: base.py  budget.py  prompts.py  router.py
openclaw/llm/providers/: anthropic.py  deepseek.py  gemini.py  groq.py  nvidia.py  openai.py  openrouter.py
openclaw/messages/: formatter.py  intent.py  models.py
openclaw/observability/: health.py  logging.py  metrics.py
openclaw/skills/: base.py  registry.py
openclaw/skills/builtin/: admin.py  chat.py  diagnose.py  diagram.py  gist.py  gist_work_order.py  photo.py  project.py  search.py  shell.py  status.py  wiring_enrich.py  work_order.py
openclaw/wiring/: __init__.py  cli.py  gaps.py  kb_enrichment.py  models.py  pipeline.py  prompts.py  store.py
plugins/: README.md
scripts/: check-health.sh  sync-doppler.sh
tests/: test_config.py  test_intent.py
(+3 files in other folders)
